src/tests/fixtures/preprocessor/errors/error9.cpp
#include <src/tests/fixtures/preprocessor/errors/assert_include.h>
#include <src/tests/fixtures/preprocessor/errors/assert_include_2.h>
/* #include <src/poof/output/stream_and_cursor_counted_string.h> */
